# ma395_heuristic

./: .gitignore
homework/hw1/: Homework 1.ipynb  experiment.py  requirements.txt
homework/hw2/: template.tex
homework/hw2/code/: Homework 2.ipynb  Problem 1.ipynb  Problem 2.ipynb  Problem 3.ipynb  pyproject.toml
homework/hw2/code/simulated_annealing/: algorithm.py  cont_neighbors.py  experiment_utils.py  tsp_neighbors.py
homework/hw3/codebase/: pyproject.toml
homework/hw3/codebase/Notebooks/: Problem 1.ipynb  Problem 2.ipynb  Problem 3.ipynb  Problem 4.ipynb  Problem 5.ipynb
homework/hw3/codebase/tabu_search/: algorithm.py  p4.py  p5.py
homework/hw5/code/: Problem 3.ipynb  pyproject.toml
homework/hw5/code/code/: nsga2.py
homework/hw5/code/codebase/: nsga2.py
homework/hw5/code/codebase/tester/: p3-part1.py
lectures/: Lecture 1.ipynb  Lecture 3.ipynb  Lecture 4.ipynb  Lecture 5.ipynb  lect03.py
project/: milestone2.md  milestone3.md  proposal.html  proposal.md  result-non-scaling-frontier.csv  result-scaling.csv
project/algorithms/: Analysis.ipynb  AnalysisPart1.ipynb  bo-small-111.csv  bo-small-112.csv  bo-small-123.csv  bo-small-221.csv  pyproject.toml  result-non-scaling-frontier.csv  result-non-scaling.csv  result-pop-scaling.csv  result-scaling-frontier.csv  result-scaling.csv  result-small-pop-scaling.csv  result-small.csv  result.csv  result.txt
project/algorithms/algorithms/: bayesian.py  main.py  moo.py  nsga2.py  objective_func.py  utils.py
project/algorithms/index/: ann
project/algorithms/index_non_scaling/: ann
project/algorithms/index_scaling/: ann
project/algorithms/index_scaling2/: ann
project/report/: preamble.tex  template.tex
project/slides/: preamble.tex  template.tex
(+58 files in other folders)
