[tool.poetry]
name = "algorithms"
version = "0.1.0"
description = ""
authors = ["Nawat Ngerncham <n.ngerncham@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "1.25"
diskannpy = "^0.6.1"
psutil = "^5.9.6"
ordered-set = "^4.1.0"
jupyter = "^1.0.0"
pandas = "2.0"
seaborn = "^0.13.0"
ipympl = "^0.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
