[tool.poetry]
name = "code"
version = "0.1.0"
description = ""
authors = ["Nawat Ngerncham <n.ngerncham@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.0"
pandas = "^2.1.1"
more-itertools = "^10.1.0"
jupyter = "^1.0.0"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
