[tool.poetry]
name = "code"
version = "0.1.0"
description = ""
authors = ["Nawat Ngerncham <n.ngerncham@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
jupyter = "^1.0.0"
ordered-set = "^4.1.0"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
